# jafar

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: sample_aapl_risk.json
jafar/: config.py
jafar/api/: main.py  schemas.py
jafar/dashboard/: app.py
jafar/graph/: neo4j_client.py
jafar/ingest/: quartr.py  scheduler.py
jafar/ingest/macro/: bls.py  fred.py  truflation.py  vix.py
jafar/ingest/osint/: news.py  pdf_earnings.py  reddit.py  sec.py  x.py
jafar/macro_regime/: model.py  signals.py
jafar/nlp/: extractor.py  risk_scorer.py
jafar/orchestrator/: flows.py
scripts/: run_demo.sh  setup.sh
tests/: conftest.py  test_macro.py  test_osint.py  test_risk.py
